[package]
name = "ganusimp-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-files = "0.6.0-beta.12"
actix-web = "4.0.0-beta.17"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["rt-multi-thread", "macros"] }
toml = "0.5"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "utils"
]